fixed bottom spacing for mobile phones

--- a/TapMinder/WebContent/customcss/stylesheet.css
+++ b/TapMinder/WebContent/customcss/stylesheet.css
@@ -17,6 +17,12 @@ body{
 	
 }
 
+@media (max-width: 500px){
+	.fixed-bottom-footer {
+		height: 12%;
+		}
+} 
+
 
 /*alert text*/
 .alert-text{
